Changelog
=========

3.0rc1 - 2010-06-24
-------------------

* Updated Flowplayer to 3.2.2
  [naro]

* Fix to address Flash 10.1 issue.
  [dunlapm]

3.0b7 - 2010-03-14
------------------

* Do not fail if Kupu is not available
  [naro]
  
* added z3c.autoinclude plugin 
  [naro]
  
* Fixed handling of audio player if created from Kupu.
  [naro]

3.0b6 - 2010-03-09
------------------

* Updated Flowplayer to 3.1.5

* Partially fixed class="autoFlowPlayer minimal audio". 
  Class minimal in combination with audio still causes problems.
  [naro]

3.0b5 - 2009-12-11
------------------ 

* Removed @@ prefix from collective.flowplayer.js in javascript registry.
  It probably confused Safari and Chrome. Thanks dahoste for pointing to
  this issue.
  [naro]

* Flowplayer updated to 3.1.4; modules updated to the latest versions
  [naro]

* Added headerparsing to IVideo-enhanced links. This allows using the
  scaling property `clip/scaling` for links 
  [tom_gross]

3.0b4 - 2009-10-05
------------------ 

* Depend on plone.app.jquerytools: plone.app.jqtools was renamed and the
  package removed, so new installations would break.
  [optilude]

* use IFileContent instead of IATFile to be able to handle ATBlob as well.

* added empty upgrade step for such version changes which does not require any
  upgrade. This is not apparently good solution.
  [naro]

3.0b3 - 2009-09-26
------------------

* URL passed to flowplayer must end with known media suffix (flv, mp3, mp4
  etc.). URL http://portal/folder/myvideo is not valid source for
  Flowplayer, but http://portal/folder/myvideo?e=.flv is.
  Thanks to Milos Prudek for pointing to this issue.
  [naro]

3.0b2 - 2009-09-16
------------------

* added missing plone.app.jqtools zcml include
  [naro]

* It is possible to specify flash parameters using param/... properties.
  'player' property were changed to 'param/src'. This may be used for setting
  eg. param/wmode to 'opaque'.
  [naro]


3.0b1 - 2009-09-15
------------------
