@@ -1,12 +1,15 @@
 <configure
     xmlns="http://namespaces.zope.org/zope"
     xmlns:browser="http://namespaces.zope.org/browser"
+    xmlns:five="http://namespaces.zope.org/five"
     xmlns:i18n="http://namespaces.zope.org/i18n"
     xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
     i18n_domain="collective.flowplayer">
 
     <include package="plone.app.jquerytools" />
     <include package=".browser" />
+
+    <five:registerPackage package="." initialize=".initialize" />    
     
     <adapter factory=".media.VideoInfoAdapter" />
     <adapter factory=".media.AudioInfo" />
@@ -38,6 +41,14 @@
         title="Flowplayer"
         directory="profiles/default"
         provides="Products.GenericSetup.interfaces.EXTENSION"
+        />
+        
+    <genericsetup:registerProfile
+        name="uninstall"
+        title="Flowplayer Uninstall"
+        directory="profiles/uninstall"
+        provides="Products.GenericSetup.interfaces.EXTENSION"
+        description="Uninstall profile for collective.flowplayer"
         />
         
     <genericsetup:importStep
