@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<object name="portal_css">
+ <stylesheet id="++resource++collective.flowplayer.css/flowplayer.css" 
+    remove="True" />
+ <stylesheet id="++resource++collective.flowplayer.css/flowplayer-horizontal.css" 
+    remove="True" />
+</object>
