@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<object name="portal_javascripts">
+ <javascript id="++resource++collective.flowplayer/flowplayer.min.js" remove="True" />
+ <javascript id="++resource++collective.flowplayer/flowplayer.playlist.min.js" remove="True" />
+ <javascript id="collective.flowplayer.js" remove="True" />
+</object>
