@@ -1,0 +1,13 @@
+<?xml version="1.0"?>
+<object>
+ <layout>
+  <styles purge="False">
+   <element value="Video|div|autoFlowPlayer video" remove="True"/>
+   <element value="Video (left)|div|autoFlowPlayer video image-left" remove="True"/>
+   <element value="Video (right)|div|autoFlowPlayer video image-right" remove="True"/>
+   <element value="Audio|div|autoFlowPlayer audio" remove="True"/>
+   <element value="Audio (left)|div|autoFlowPlayer audio image-left" remove="True"/>
+   <element value="Audio (right)|div|autoFlowPlayer audio image-right" remove="True"/>
+  </styles>
+ </layout>
+</object>
